<resources>
    <string name="app_name">Project_Mine_News</string>

    <string name="home">首页</string>
    <string name="video">视频</string>
    <string name="care">关注</string>
    <string name="mine">我的</string>

    <string name="loading">正在加载...</string>
    <string name="news">新闻</string>
    <string name="news_detail">新闻详情</string>
    <string name="no_net">貌似断网了</string>
    <string name="empty">空</string>
    <string name="no_data">没有数据</string>
    <string name="click_to_login">点击登陆</string>
    <string name="reset">重置</string>
    <string name="search_result">搜索结果</string>

    <string name="search">搜索</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="input_username">请输入用户名/手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_new">注册新账号</string>
    <string name="login_wechat">微信登录</string>
    <string name="verification_code">验证码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="next_step">下一步</string>
    <string name="find_password">找回密码</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="input_password_agine_to_comfirm">请再次输入密码确认</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="reset_password">重设密码</string>
    <string name="agreement">点击注册表示您已阅读并同意《<u>用户协议</u>》</string>
    <string name="user_register">用户注册</string>
    <string name="user_agreement">用户协议</string>
    <string name="agreement_content">点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同>点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》点击注册表示您已阅读并同意《<u>用户协议</u>》</string>
    <string name="setup">设置</string>
    <string name="security">账号与安全</string>
    <string name="securityupdatephone">输入新号码</string>
    <string name="complete">完成</string>
</resources>
