<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tbarFindPwdStepTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?actionBarSize"
        app:navigationIcon="@drawable/back"
        app:title="@string/reset_password" />

    <LinearLayout
        android:layout_width="@dimen/dimen_900"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_60"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/password" />

            <com.yyf.www.project_quicknews.view.EditTextWithDelete
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_150"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textColorHint="#cccccccc" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/confirm_password" />

            <com.yyf.www.project_quicknews.view.EditTextWithDelete
                android:id="@+id/etPasswordAgain"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_150"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/input_password_agine_to_comfirm"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textColorHint="#cccccccc" />

        </LinearLayout>

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_60"
            android:text="@string/reset" />

    </LinearLayout>


</LinearLayout>
