<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tbarFindPwdStepOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?actionBarSize"
        app:navigationIcon="@drawable/back"
        app:title="@string/find_password"
        app:titleTextColor="@color/white"/>

    <LinearLayout
        android:layout_width="@dimen/dimen_900"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.yyf.www.project_quicknews.view.EditTextWithDelete
            android:id="@+id/etTelephone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_150"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_60"
            android:gravity="center"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:textColorHint="#cccccccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.yyf.www.project_quicknews.view.EditTextWithDelete
                android:id="@+id/etVerificationCode"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_150"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/verification_code"
                android:inputType="number"
                android:maxLength="6"
                android:textColorHint="#cccccccc" />

            <Button
                android:id="@+id/btnSendVerificationCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="@string/send_verification_code" />
        </LinearLayout>

        <Button
            android:id="@+id/btnNextStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_60"
            android:text="@string/next_step" />

    </LinearLayout>


</LinearLayout>
