<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.yyf.www.project_quicknews.fragment.HomeFragment">

    <LinearLayout
        android:layout_width="@dimen/dimen_900"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
            android:textSize="@dimen/dimen_90sp" />

        <ImageView
            android:layout_width="@dimen/dimen_216"
            android:layout_height="@dimen/dimen_216"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_60"
            android:src="@mipmap/ic_launcher" />

        <com.yyf.www.project_quicknews.view.EditTextWithDelete
            android:id="@+id/etTelephone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_150"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_60"
            android:gravity="center"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:textColorHint="#cccccccc" />

        <com.yyf.www.project_quicknews.view.EditTextWithDelete
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_150"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_30"
            android:gravity="center"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColorHint="#cccccccc" />

        <TextView
            android:id="@+id/tvFindPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dimen_30"
            android:text="@string/forget_password" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:background="@drawable/selector_round_rect"
            android:text="@string/login" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_30"
            android:text="@string/register_new" />

    </LinearLayout>
</LinearLayout>